...
                style: TextStyle(
                  color: darkBlue,
                  fontSize: 40,
                  fontWeight: FontWeight.bold,
                )),
            const SizedBox(height: 30),
            LoginButton(onTap: _goToLogInPage, text: "Log In"),
            const SizedBox(height: 30),
            LoginButton(text: "Register", onTap: _goToRegisterPage),
            const SizedBox(height: 50),
            const Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
...
