...
import 'package:coordimate/app_state.dart';
import 'package:coordimate/models/groups.dart';
import 'package:coordimate/pages/schedule_page.dart';

class ScheduleController {
  String scheduleUrl = '';
  String pageTitle = 'Schedule';
  bool isModifiable = false;
  bool canCreateMeeting = false;
  String ownerId = '';

  void setScheduleParams(scheduleUrl_, pageTitle_, isModifiable_, canCreateMeeting_) {
    scheduleUrl = scheduleUrl_;
...
