...

  User user = User(
    email: email,
    authType: signInType[signInMethod],
  );
  if (signInMethod == AuthType.email) {
    user = User(
      email: email,
      password: pswd,
    );
  }

  final response = await client.post(
...
